# pam-rs

./: Cargo.toml  README.md
examples/: spawn_bash.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: client.rs  enums.rs  env.rs  functions.rs
