[package]
name = "pam-rs"
version = "0.9.4"
description = "An up-to-date fork of the `pam` crate."
license = "MIT OR Apache-2.0"
categories = ["authentication"]

repository = "https://github.com/OldUser101/pam-rs/"
documentation = "https://docs.rs/pam-rs/"
readme = "README.md"
include = [ "LICENSE-*", "README.md", "CHANGELOG.md", "/src", "/examples"  ]

edition = "2018"

[features]
default = ["client"]

functions = []
client = ["uzers"]
module = []

[dependencies]
pam-macros = { version = "=0.0.3", path = "macros" }
libc    = "^0.2"
pam-sys = "1.0.0-alpha5"
memchr = "2.5.0"
uzers = { version = "0.11.3", optional = true }

[dev-dependencies]
rpassword = "7.2.0"

[workspace]
members = [
    ".",
    "macros"
]
