[package]

name = "pam-rs-macros"
version = "0.0.4"
description = "Macros for the pam crate"
license = "MIT OR Apache-2.0"

repository = "https://github.com/OldUser101/pam-rs/"
documentation = "https://docs.rs/pam_rs_macros/"

edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = { version = "1.0" }
